objects/Payment_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_with_GST__c</fullName>
        <formula>Amount__c *1.18</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount with GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Online_Payment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CASH</fullName>
                </value>
                <value>
                    <fullName>UPI</fullName>
                </value>
                <value>
                    <fullName>NET BANKING</fullName>
                </value>
                <value>
                    <fullName>CHEQUE</fullName>
                </value>
                <value>
                    <fullName>NEFT</fullName>
                </value>
                <value>
                    <fullName>RTGS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Payment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Online Payment</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Receipt</label>
    <nameField>
        <displayFormat>RH-{00000}</displayFormat>
        <label>Payment Receipt No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>